--- a/admin_panel/assets/css/styles.css
+++ b/admin_panel/assets/css/styles.css
@@ -48,13 +48,13 @@
       padding: 8px 8px 8px 32px;
       text-decoration: none;
       font-size: 22px;
-      color: #F0F0F0;
+      color: #000000;
       display: block;
       transition: 0.3s;
     }
     /* When you mouse over the navigation links, change their color */
     .sidebar a:hover {
-      background-color: #BF94E4;
+      background-color: #a863e4;
     }
 
     /* hello admin */
@@ -62,7 +62,7 @@
     {
           margin-left: 30px;
           margin-bottom: 8px;
-          color: #F0F0F0;
+          color: #000000;
       }
 
     
@@ -128,7 +128,7 @@
   }
 
   th {
-    background-color: #232B38;
+    background-color: #BF94E4;
     color: #F0F0F0;
     font-family: 'Open Sans', Sans-serif;
     font-weight: bold;
